[project]
name = "crawl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.11",
    "bs4>=0.0.2",
    "crawl4ai>=0.4.248",
    "groq>=0.17.0",
    "ollama>=0.4.7",
    "openai>=1.61.0",
    "playwright>=1.50.0",
    "playwright-stealth>=1.0.6",
    "selenium>=4.28.1",
    "streamlit>=1.42.0",
    "webdriver-manager>=4.0.2",
]
